--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.8"
-  }
+  "@eslint/eslintrc": "^3",
+  "eslint": "^9",
+  "eslint-config-next": "15.1.6",
+  "eslint-plugin-jsx-a11y": "^6.10.0",
+  "eslint-plugin-react": "^7.37.0",
+  "eslint-plugin-react-hooks": "^5.0.0"
 }
